--- a/courseworkAD1/courseworkAD1.csproj
+++ b/courseworkAD1/courseworkAD1.csproj
@@ -47,18 +47,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\UserBLL.cs" />
+    <Compile Include="BusinessObjects\CurrentUserBO.cs" />
     <Compile Include="BusinessObjects\UserBO.cs" />
     <Compile Include="DAL\UserDAL.cs" />
     <Compile Include="dbConnection.cs" />
-    <Compile Include="Registration.cs">
+    <Compile Include="UI\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Registration.Designer.cs">
+    <Compile Include="UI\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Registration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Registration.Designer.cs">
       <DependentUpon>Registration.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Registration.resx">
+    <EmbeddedResource Include="UI\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Registration.resx">
       <DependentUpon>Registration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
