--- a/courseworkAD1/courseworkAD1.csproj
+++ b/courseworkAD1/courseworkAD1.csproj
@@ -47,19 +47,34 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\JobBLL.cs" />
+    <Compile Include="BLL\LoadBLL.cs" />
     <Compile Include="BLL\ProductBLL.cs" />
     <Compile Include="BLL\UnitsBLL.cs" />
     <Compile Include="BLL\UserBLL.cs" />
     <Compile Include="BusinessObjects\CurrentUserBO.cs" />
     <Compile Include="BusinessObjects\JobBO.cs" />
+    <Compile Include="BusinessObjects\LoadBO.cs" />
     <Compile Include="BusinessObjects\ProductBO.cs" />
     <Compile Include="BusinessObjects\UnitsBO.cs" />
     <Compile Include="BusinessObjects\UserBO.cs" />
     <Compile Include="DAL\JobDAL.cs" />
+    <Compile Include="DAL\LoadDAL.cs" />
     <Compile Include="DAL\ProductDAL.cs" />
     <Compile Include="DAL\UnitsDAL.cs" />
     <Compile Include="DAL\UserDAL.cs" />
     <Compile Include="dbConnection.cs" />
+    <Compile Include="UI\jobsReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\jobsReport.Designer.cs">
+      <DependentUpon>jobsReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\AcceptJob.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\AcceptJob.Designer.cs">
+      <DependentUpon>AcceptJob.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\AddProduct.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,12 +98,6 @@
     </Compile>
     <Compile Include="UI\CreateJob.Designer.cs">
       <DependentUpon>CreateJob.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Customers.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\Customers.Designer.cs">
-      <DependentUpon>Customers.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Jobs.cs">
       <SubType>Form</SubType>
@@ -123,6 +132,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\SingleJobView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\SingleJobView.Designer.cs">
+      <DependentUpon>SingleJobView.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Units.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +162,12 @@
     <Compile Include="UI\UserDashboard.Designer.cs">
       <DependentUpon>UserDashboard.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\jobsReport.resx">
+      <DependentUpon>jobsReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\AcceptJob.resx">
+      <DependentUpon>AcceptJob.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\AddProduct.resx">
       <DependentUpon>AddProduct.cs</DependentUpon>
     </EmbeddedResource>
@@ -158,9 +179,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\CreateJob.resx">
       <DependentUpon>CreateJob.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\Customers.resx">
-      <DependentUpon>Customers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Jobs.resx">
       <DependentUpon>Jobs.cs</DependentUpon>
@@ -186,6 +204,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\SingleJobView.resx">
+      <DependentUpon>SingleJobView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Units.resx">
       <DependentUpon>Units.cs</DependentUpon>
     </EmbeddedResource>
